Fixes bug with nav not showing up over header on small screens.  Potentially fixes a bug on small screens where the layout is messed up on the inserts page.

--- a/styles.css
+++ b/styles.css
@@ -1310,6 +1310,7 @@ nav ul li {
   #home {
     background: rgba(0,50,64,0.4) url('background.jpg') no-repeat center top / cover;
     height: 40vw;
+    z-index: 1;
   }
   #totalsList {
     display: -webkit-flex;
@@ -1413,6 +1414,7 @@ footer {
   text-align: center;
   opacity: 0.1;
   pointer-events: none;
+  min-width: initial;
 }
 .inserts:hover {
   text-decoration: none;
